검색필드 추가

--- a/stacked_bar/webapp/view/View1.view.xml
+++ b/stacked_bar/webapp/view/View1.view.xml
@@ -22,8 +22,7 @@
         </customHeader>
         <content>
             <layout:FixFlex 
-                id="idFixFlex" 
-                minFlexSize="250">
+                id="idFixFlex" >
                 <!-- <layout:fixContent> -->
                     <!-- <Panel id='settingsPanel' class="panelStyle" expandable="true" expanded="true" headerText="Settings" width="auto"> -->
                         <!-- <content> -->
@@ -123,19 +122,22 @@
                                 <chart:content>
                                     <VBox fitContainer="true"
                                     >
-                                        <SearchField
-                                        enableSuggestions="false"
-                                        enabled="true"
-                                        maxLength="0"
-                                        placeholder="입력하세요"
-                                        refreshButtonTooltip=""
-                                        showRefreshButton="false"
-                                        showSearchButton="true"
-                                        value=""
-                                        visible="true"
+                                    <DatePicker
+                                        placeholder="ex. 2024-05"
+                                        id="DP10"
+                                        valueFormat="yyyy-MM"
+                                        value="{
+                                            'path': '2024-05-01',
+                                            'type': 'sap.ui.model.type.Date',
+                                            'formatOptions': {
+                                                'pattern': 'yyyy-MM'
+                                            }
+                                        }"
+                                        change="handleChange"
+                                        liveChange=".handleChange"
+                                        class="sapUiSmallMarginBottom"
                                         width="10rem"
-                                        class="sapUiSmallMargin"
-                                        />
+                                    />
                                         <Table id="chartContainerContentTable" items="{ path: '/AnlSet' }">
                                             <columns>
                                                 <Column demandPopin="true" hAlign="Center">
@@ -144,6 +146,8 @@
                                                 <!-- <Label design="Bold" text="{i18n>labelAnlhtxt}"/></Column> -->
                                                 <Column demandPopin="true" hAlign="Right">
                                                 <Label design="Bold" text="{i18n>labelAmount}"/></Column>
+                                                <Column demandPopin="true" hAlign="Right">
+                                                <Label design="Bold" text="{i18n>labelSumamt}"/></Column>
                                                 <Column demandPopin="true" hAlign="Right">
                                                 <Label design="Bold" text="{i18n>labelRemamt}"/></Column>
                                                 <Column demandPopin="true" hAlign="Center">
@@ -169,13 +173,22 @@
                                                     unit="{Waers}" />
                                                     <ObjectNumber number="{
                                                         parts: [
-                                                        {path: 'Remamt'},
+                                                        {path: 'Sumamt'},
                                                         {path: 'Waers'}
                                                         ],
                                                         type: 'sap.ui.model.type.Currency',
                                                         formatOptions: {showMeasure: false}
                                                     }" 
                                                     unit="{Waers}" />
+                                                    <ObjectNumber number="{
+                                                        parts: [
+                                                        {path: 'Remamt'},
+                                                        {path: 'Waers'}
+                                                        ],
+                                                        type: 'sap.ui.model.type.Currency',
+                                                        formatOptions: {showMeasure: false}
+                                                    }" 
+                                                    unit="{Waers}"/>
                                                     <ObjectIdentifier text="{Depmethod}"/>
                                                     <!-- <ObjectIdentifier text="{Fixra}"/> -->
                                                     <ObjectNumber number="{
@@ -183,7 +196,11 @@
                                                         formatter: '.formatter.removeLeadingZeros'
                                                     }"
                                                     unit="%"/>
-                                                    <ObjectIdentifier text="{Acqdate}"/>
+                                                    <ObjectIdentifier text="{
+                                                        path: 'Acqdate',
+                                                        type: 'sap.ui.model.type.Date',
+                                                        formatOptions: {pattern: 'yyyy-MM-dd'}
+                                                    }"/>
                                                     <!-- <ObjectIdentifier text="{Ndjar}"/> -->
                                                     <ObjectNumber number="{
                                                         path: 'Ndjar', 
