--- a/stacked_bar/webapp/view/View1.view.xml
+++ b/stacked_bar/webapp/view/View1.view.xml
@@ -123,7 +123,7 @@
                                     <VBox fitContainer="true"
                                     >
                                     <DatePicker
-                                        placeholder="ex. 2024-05"
+                                        placeholder="취득일을 선택하세요"
                                         id="DP10"
                                         valueFormat="yyyy-MM"
                                         value="{
@@ -136,7 +136,7 @@
                                         change="handleChange"
                                         liveChange=".handleChange"
                                         class="sapUiSmallMarginBottom"
-                                        width="10rem"
+                                        width="13rem"
                                     />
                                         <Table id="chartContainerContentTable" items="{ path: '/AnlSet' }">
                                             <columns>
