--- a/stacked_bar/webapp/view/View1.view.xml
+++ b/stacked_bar/webapp/view/View1.view.xml
@@ -120,24 +120,26 @@
                             </chart:ChartContainerContent>
                             <chart:ChartContainerContent icon="sap-icon://table-view" title="Table">
                                 <chart:content>
-                                    <VBox fitContainer="true"
+                                    <VBox fitContainer="true" 
                                     >
-                                    <DatePicker
-                                        placeholder="취득일을 선택하세요"
-                                        id="DP10"
-                                        valueFormat="yyyy-MM"
-                                        value="{
-                                            'path': '2024-05-01',
-                                            'type': 'sap.ui.model.type.Date',
-                                            'formatOptions': {
-                                                'pattern': 'yyyy-MM'
-                                            }
-                                        }"
-                                        change="handleChange"
-                                        liveChange=".handleChange"
-                                        class="sapUiSmallMarginBottom"
-                                        width="13rem"
-                                    />
+                                    <OverflowToolbar class="sapFDynamicPageAlignContent">
+                                        <DatePicker
+                                            placeholder="취득일을 선택하세요"
+                                            id="DP10"
+                                            valueFormat="yyyy-MM"
+                                            value="{
+                                                'path': '2024-05-01',
+                                                'type': 'sap.ui.model.type.Date',
+                                                'formatOptions': {
+                                                    'pattern': 'yyyy-MM'
+                                                }
+                                            }"
+                                            change="handleChange"
+                                            liveChange=".handleChange"
+                                            class="sapUiSmallMarginBottom"
+                                            width="13rem"
+                                        />
+                                    </OverflowToolbar>
                                         <Table id="chartContainerContentTable" items="{ path: '/AnlSet' }">
                                             <columns>
                                                 <Column demandPopin="true" hAlign="Center">
