차트 크기 수정

--- a/account_amount/webapp/css/style.css
+++ b/account_amount/webapp/css/style.css
@@ -1,1 +1,4 @@
 /* Enter your custom styles here */
+.sapUiRespGridSpanXL3.sapUiRespGridSpanL4.sapUiRespGridSpanM6.sapUiRespGridSpanS12 {
+    width: 100%;
+}
