--- a/account_amount/webapp/view/Dialog.fragment.xml
+++ b/account_amount/webapp/view/Dialog.fragment.xml
@@ -1,25 +1,33 @@
 <c:FragmentDefinition
-	xmlns="sap.m"
-	xmlns:c="sap.ui.core"
+    xmlns="sap.m"
+    xmlns:c="sap.ui.core"
 >
     <SelectDialog
         noDataText="계정 정보가 없습니다."
         title="G/L 계정 목록"
-        search="handleSearch"
+        search=""
         confirm="handleValueHelpClose"
         cancel="handleValueHelpClose"
         showClearButton="true"
-        clear="handleClear"
+        rememberSelections="true"
+        
+
+        liveChange="handleSearch"
         items="{
             path : '/SakSet',
             sorter : {
                 path : 'Saknr',
                 descending : false
             }
-        }">
-        <StandardListItem selected="{selected}"
-            title="{Saknr}"
-            description="{Schlw}" 
-            type="Active"/>
+        }"
+    >
+        <items>
+            <StandardListItem
+                selected="{selected}"
+                title="{Saknr}"
+                description="{Schlw}"
+                type="Active"
+            />
+        </items>
     </SelectDialog>
 </c:FragmentDefinition>
